=======
CHANGES
=======

Version 2.0.0 (unreleased)
--------------------------

- Bug: ButtonActions update where appending keys and values within each
  update call. 

- Bug: The CollectionSequenceDataConverter no longer throws a
  "TypeError: 'NoneType' object is not iterable" when passed the value
  of a non-required field (which in the case of a List field is None).

- Feature: Added support for using sources. Where is was previosly possible to
  use a vocabulary it is now also possible to use a source. This works both
  for basic and contextual sources.

  IMPORTANT: The `ChoiceTerms` and and CollectionTerms in ``z3c.form.term``
  are now simple functions that quieries for real ITerms adapters for
  field's source or value_type respectively. So if your code inherits
  the old ChoiceTerms and CollectionTerms classes, you'll need to review
  and adapt it. See the ``z3c.form.term`` package and its documentation.

- Fix: IMPORTANT - the signature of z3c.form.util.extractFileName function
  changed because of spelling mistake fix in argument name. The
  ``allowEmtpyPostFix`` is now called ``allowEmptyPostfix`` (note ``Empty``
  instead of ``Emtpy`` and ``Postfix`` instead of ``PostFix``).

- Fix: IMPORTANT - the ``z3c.form.interfaces.NOVALUE`` special value
  has been renamed to ``z3c.form.interfaces.NO_VALUE`` to follow the
  common naming style. The backward-compatibility NOVALUE name is
  still in place, but the `repr` output of the object has been also
  changed, thus it may break your doctests.

- Feature: the new ``z3c.form.interfaces.NOT_CHANGED`` special value
  is available to signal that the current value should be left as is.
  It's currently handled in the ``z3c.form.form.applyChanges`` function.

- Feature: When no file is specified in the file upload widget, instead of
  overwriting the value with a missing one, the old data is retained.
  This is done by returning the new NOT_CHANGED special value from the
  FileUploadDataConvereter.
