@@ -417,28 +417,12 @@ in a particular order:
   >>> manager.keys()
   ['id', 'lastName', 'firstName']
 
-
-
-ISSUE: duplicated key, values if update ge called more then once. 
-NOTE: I'll fix this today.
-
-  >>> keys = list(manager.keys())
-  >>> values = list(manager.values())
-  >>> data = dict(manager._data)
+As you can see, if we call update twice, we still get the same amount and
+order of keys:
 
   >>> manager.update()
   >>> manager.keys()
-  ['id', 'lastName', 'firstName', 'id', 'lastName', 'firstName']
-
-set values back to manager since the test will get otherwise messup
-
-  >>> manager._data_keys = keys
-  >>> manager._data_values = values
-  >>> manager._data = data
-
-END ISSUE
-
-
+  ['id', 'lastName', 'firstName']
 
 Let's make sure that all enumerable mapping functions work correctly:
 
